# hollow-lantern

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json
cmake/fetch-content-modules/: Catch2.cmake  SFML.cmake  fetch-content-modules.cmake  glm.cmake  nlohmann_json.cmake
config/: CMakeLists.txt  directory_paths.cpp.in  directory_paths.h
data/export/: colour_cube.json
data/test_data/vox/: complex_shape_1.vox  no_main_chunk.vox
data/vox/: colour_cube.vox  cube_one.vox  simple_cube.vox
hollow-lantern/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/manipulators/: CMakeLists.txt  Projector.cpp  Projector.h  VoxManipulator.cpp  VoxManipulator.h
src/readers/: CMakeLists.txt  DataExporter.cpp  DataExporter.h  VoxReader.cpp  VoxReader.h
src/structures/: CMakeLists.txt  ModelData.h  Voxel.h
tests/: CMakeLists.txt
tests/config/: CMakeLists.txt  directory_paths.test.cpp
tests/hollow-lantern-test/: CMakeLists.txt  hollow-lantern.test.cpp
tests/manipulators/: CMakeLists.txt  Projector.test.cpp  VoxManipulator.test.cpp
tests/readers/: CMakeLists.txt  VoxReader.test.cpp
